[package]
name = "study_note"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
lazy_static = "1.4.0"
rand = "0.7.3"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
telegram-bot = "0.7.0"
tokio = { version = "0.2", features = ["full"] }